<resources>
    <string name="app_name">한성대 공지</string>
    <string name="retry">재시도</string>
    <string name="notice">공지사항</string>
    <string name="favorite">즐겨찾기</string>
    <string name="new_notice">새로운 공지사항</string>
    <string name="fail_to_connect">연결에 실패했습니다.</string>
    <string name="invalid_data">잘못된 정보입니다.</string>
    <string name="notice_subtitle">%s · %s</string>
    <string name="authentication_failed">인증 실패. 인터넷 연결을 확인해주세요.</string>
    <string name="input_hint">추가</string>
    <string name="keyword_help">10분마다 새로운 공지사항을 확인하여 새로운 공지사항에 키워드가 포함되어 있는 경우 알림을 보내드려요.</string>
    <string name="delete_keyword">키워드 삭제</string>
    <string name="notification_keyword">알림 키워드</string>
    <string name="keyword_max_hint">최대 %d개까지 만들 수 있어요</string>
    <string name="empty_favorite_notice">즐겨찾기된 항목이 없어요</string>
    <string name="failed_to_subscribe_keyword">키워드 구독에 실패했습니다.</string>
    <string name="failed_to_unsubscribe_keyword">키워드 구독 취소에 실패했습니다.</string>
    <string name="firebase_keyword_noti_channel_id">keyword_subscribe</string>
    <string name="keyword_notification">키워드 알림</string>
    <string name="web_client_id">86099946857-q8hjdct33dbr1aqhdn7b9te9hcvde4ac.apps.googleusercontent.com</string>
    <string name="failed_to_sign_in">로그인에 실패했습니다.</string>
    <string name="keyword_login_text">키워드 목록을 저장하기 위해\n로그인이 필요해요.</string>
    <string name="sync_image">동기화 이미지</string>
    <string name="sign_in_with_google">Google 계정으로 로그인</string>
    <string name="failed_to_subscribe_previous_keywords">이전 키워드 재구독에 실패했습니다. 키워드를 삭제후 다시 생성해주세요.</string>
    <string name="failed_to_load">로딩에 실패했습니다.</string>
    <string name="invalid_keyword">유효하지 않은 키워드입니다.</string>
    <string name="add_keyword">키워드 추가하기</string>
    <string name="search_notification">공지사항 검색</string>
    <string name="check_internet_connection">인터넷 연결을 확인해주세요.</string>
    <string name="cannot_create_keyword">키워드를 생성할 수 없습니다.</string>
    <string name="submit">등록</string>
    <string name="cancel">취소</string>
    <string name="no_search_result">검색 결과가 없어요</string>
    <string name="file_downloading">파일 다운로드 중…</string>
    <string name="need_permission_for_download_file">파일을 다운받기 위해 권한이 필요해요.</string>
    <string name="ok">확인</string>
    <string name="deny">거부</string>
    <string name="added_keyword">\"%s\" 추가됨</string>
    <string name="removed_keyword">\"%s\" 삭제됨</string>
    <string name="cafeteria">학생식당</string>
    <string name="failed_to_scrap">스크래핑에 실패했습니다. jja08111@gmail.com로 문의 부탁드립니다.</string>
    <string name="daily_menu_date_pattern">M월 d일 E요일 식단</string>
    <string name="there_is_no_menu_info">아직 등록된 식단 정보가 없습니다.</string>
    <string name="please_grant_notification_permission">키워드 알림을 위해서 알림 권한을 허용해주세요.</string>
</resources>