<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav"
    app:startDestination="@id/noticeFragment">

    <fragment
        android:id="@+id/noticeFragment"
        android:name="com.foundy.presentation.view.home.notice.NoticeFragment"
        android:label="@string/notice"
        tools:layout="@layout/fragment_notice"/>
    <fragment
        android:id="@+id/favoriteFragment"
        android:name="com.foundy.presentation.view.home.favorite.FavoriteFragment"
        android:label="@string/favorite"
        tools:layout="@layout/fragment_favorite" />
    <fragment
        android:id="@+id/cafeteriaFragment"
        android:name="com.foundy.presentation.view.home.cafeteria.CafeteriaFragment"
        android:label="@string/cafeteria"
        tools:layout="@layout/fragment_cafeteria" />
</navigation>